--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -19,6 +19,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.4"
   },
